# ChangeLog for sci-libs/gdal
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/gdal/ChangeLog,v 1.119 2011/09/26 03:33:45 nerdboy Exp $

*gdal-1.8.1-r1 (26 Sep 2011)

  26 Sep 2011; Steve Arnold <nerdboy@gentoo.org> +gdal-1.8.1-r1.ebuild,
  +files/gdal-1.8.1-zlib_header_fix.patch:
  Updated for zlib header changes (closes bug #383569).  Also updated
  python handling and EAPI.

  26 Jul 2011; Jesus Rivero <neurogeek@gentoo.org> gdal-1.8.1.ebuild:
  Added python_mod_cleanup in pkg_postrm

  25 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org> gdal-1.8.1.ebuild:
  Shutup python warning. Fixes bug #376295.

*gdal-1.8.1 (22 Jul 2011)

  22 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org> -gdal-1.8.0-r1.ebuild,
  +gdal-1.8.1.ebuild:
  Version bump to the latest. Drop older.

  18 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org> gdal-1.8.0-r1.ebuild:
  Silence the pkgcore warning.

  16 Jul 2011; Justin Lecher <jlec@gentoo.org> gdal-1.6.3-r1.ebuild,
  gdal-1.8.0-r1.ebuild, metadata.xml:
  Rearrange the ebuild, no external changes

  08 Jul 2011; Samuli Suominen <ssuominen@gentoo.org> gdal-1.6.3-r1.ebuild:
  Convert from "useq" to "use".

  05 Jul 2011; Steve Arnold <nerdboy@gentoo.org> gdal-1.8.0-r1.ebuild:
  This should fix the seemingly random (and unreproducible by me) install 
  bug reported again here.  I still can't reproduce it on any of my test 
  boxes but the build log attached to this bug shows an extra DESTDIR that 
  shouldn't be there (and now it isn't).  Also removed a failing autoheader
  and added some additional python eclass helper functions.

  11 Jun 2011; Tomáš Chvátal <scarabeus@gentoo.org> gdal-1.8.0-r1.ebuild:
  Build with any tiff version, but make sure it is always the external one.

  11 Jun 2011; Tomáš Chvátal <scarabeus@gentoo.org> gdal-1.8.0-r1.ebuild:
  Build with any tiff version, but make sure it is always the external one.
