@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 1.7.2-ruby_cflags.patch 1161 RMD160 5635b016c18a54a45e4f9410028f0a4596b52e5b SHA1 42389f01f14ba57a6337a9a1cdbe889c9fc34d61 SHA256 8a943b69b200e8b926e2ed9ad1861a152731bb829459f402a8024e1137eed754
 AUX gdal-1.4.2-datadir.patch 353 RMD160 a5dec6a5bbe091b6e877ced363507798d0ed47d5 SHA1 eddb7f332ff361cbfb8771cc7496d2428a290d71 SHA256 761e5dc10bb8a0d6a270af62aa67e7ec1259f072db958969ce14812f85004c4e
 AUX gdal-1.5.0-install_name.patch 1731 RMD160 9e6d9d2a8a14bf01de242d889140369d083fd7c4 SHA1 4c46ebb1bb7d5f5ca2f1079e6ad1a1230ef698ef SHA256 da631282e7ee42b3f9c46a4ce76d7b4905caa4a056c8109fce0f661b9aa58abd
@@ -5,12 +8,24 @@ AUX gdal-1.5.0-soname.patch 483 RMD160 4ed5e17c3b1e50a1d0bbb52a1d3a56f5bec52aa4 
 AUX gdal-1.5.1-python-install.patch 493 RMD160 f925c5b902a14f4a75a8c6a7816c3e500a59c24e SHA1 7c02ab132485d1486751d45663af21aa9a04ace1 SHA256 122555483fcb811df1f305b20c9c492c64575321b4e834c75a2805ca8e62f593
 AUX gdal-1.6.0-swig-fix.patch 535 RMD160 a3946ac3897d73d09be2d03f1f8a5facef7301ba SHA1 9b3214e7ffe6aa821d716caf3e984841f6e208fd SHA256 83f4de0287893efbc4528a0e4ecc97e0f174d5a44406a8ab5e94e66e51286db1
 AUX gdal-1.6.1-ruby-make.patch 1150 RMD160 8e5b8397a86506d968cbf1a5a04616303df26fc8 SHA1 80c9844bfa4374879cc01af8ac90674c251e1034 SHA256 33d213226ad831ea43df8e7d78e56cd6704dc6089320ac63a4eb3d369b920dea
+AUX gdal-1.6.3-libpng15.patch 1392 RMD160 dfa674f506ca48c8e34d5c795829a78d13f2666a SHA1 18e56da5315590a0c0d97e8a95adab653a962a8c SHA256 dd730790ccbc72131f92d78d130b160b6db30b43688bd67e404932ecd6b57ebd
 AUX gdal-1.8.1-zlib_header_fix.patch 253 RMD160 0c2f1483ea373f596a6bbf0c86ba0f11094ef232 SHA1 04df59a10d1ad719742dd40b0d0225bad053a78d SHA256 019d7a858670aa4651b5c887db4f951d906fd3395e12f3f3a570295fcc171b89
 AUX gdal-png-1.5.patch 1422 RMD160 5177f60d44189289fefc98ec8f59645b880b7362 SHA1 63c3290883f6f9f70fe6ec9cd2c3e37becaeee7b SHA256 c7a5c4584b60c653b0f2116d9898e5110fe0e29d175a2fc00d34d36487856418
 DIST gdal-1.6.3.tar.gz 7007613 RMD160 aab37ae4b7a98f9af6c10511e2ce5205505b9769 SHA1 b8fc53f562dd253c0c75e9ea4d4398f9548c1f1f SHA256 bf946aa229eef28f3d95c8bbf75913aa2d89dd93a03c5cc769cd7c8b98890c67
 DIST gdal-1.8.1.tar.gz 8852355 RMD160 4ac1cd59979464bd37b4d2aa588092ee0c34d45c SHA1 b2f8b12ebdd00c05bc7f1ab7b761d9ac335c470c SHA256 d5d76b85b4a7a0e28ead6c92be0eba9e2b2361a06db0a60ef0fb85db63e7a5df
-EBUILD gdal-1.6.3-r1.ebuild 6735 RMD160 5e29a11f00004e879c12b774597b19d0b5b7947e SHA1 9b389f851c4c577ecd638a0ba18b2488ccb9c86f SHA256 82eed125dcc005990b7f1e9d223308c1d00cdf47a1b33ca966488c56b3ace9e3
+EBUILD gdal-1.6.3-r1.ebuild 6785 RMD160 c5ac165eb4fe6b7be2d150ad49f96b5de8f04388 SHA1 e61471187d0660861e9e54901485c5a37f43b763 SHA256 8aeba75ff8c13a242c67c2af7fa2fcb8d5d7b0e1ed03acf5f5d1990c8f4d47f3
 EBUILD gdal-1.8.1-r1.ebuild 6759 RMD160 42217a61a288042e6dfd822ca28cb2b0b1805c67 SHA1 c4145e3c028b41a25998e64364ff4db08581875b SHA256 f2be63285978082e5ad646b025fa685c98bb536b2cef28c14f5ac9615f67f89f
 EBUILD gdal-1.8.1.ebuild 6617 RMD160 921a18ca9653a18f0fb32ede2b2b9185271a8d5b SHA1 1384de09c51d7309d7d891d744354b8bb0d763c8 SHA256 a96ab13343f3a88a6253bc05586056c08c404f92c5f633281a54c5c8a0619916
-MISC ChangeLog 22189 RMD160 a9adddf40ded086bcb63fd6b50b079c202c3edb6 SHA1 b3de1753e5f1cfb9e1c56ab41df408f31eb32d75 SHA256 412766299d04b1f5f6f2173b1c03844eff79accac9e1b096d973d4048ecf9a33
+MISC ChangeLog 22380 RMD160 00056753f72e21e1e6cde41c2ff22e16661f52a1 SHA1 b85ff63db9a78aae2c1d159e85994b3257d188dc SHA256 1cfb1fc33bd2a702da1abeb4d770804f2dbe87b540b216660991499746d4255d
 MISC metadata.xml 1183 RMD160 a095695d479404c183e066274335dacc408bd406 SHA1 0c07b2188a4e5e2cff50ba6355a1543e7f70ed57 SHA256 789b3c4b281326a6c763ac9a62f3e1ef82ddf679e71bc7d1a1849d3772a4323e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iQEcBAEBAgAGBQJOkCbPAAoJEEdUh39IaPFNKMAH/1YuFCdPlPvBrNrsc9S4A5QA
+iK/jIv9gCqQWSfrq86xY2ER3HPzYAP+wkE4F23cw1edlyV7iNJTxbWURQ9+UFhaG
+7Ol5lKBNIzyH1vuhdtYa6qn+dvpdIn9/mPae1EnNP548L6UhenebH0jt6zUTa0RP
+ZphjyJSyXwOfWL3uePOJEdameOFWN/+6y3i6Y4cgtwafNrfn8xfj+CGZhGg1t9HS
+p9I4BtRozlMRtLZHzjV0X5tUODLiig/XxpN9g3b/IYeEVkqF6Lw+CrUX8TDbUzTI
+UU13FwasxUZht76K0CSNbX9Bc3un+lwSB3RPJwHc3hsJTB7PhDFMj5h70dO10xE=
+=75+t
+-----END PGP SIGNATURE-----
