@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/gdal
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/gdal/ChangeLog,v 1.119 2011/09/26 03:33:45 nerdboy Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/gdal/ChangeLog,v 1.120 2011/10/08 10:32:13 ssuominen Exp $
+
+  08 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> gdal-1.6.3-r1.ebuild,
+  +files/gdal-1.6.3-libpng15.patch:
+  Backport libpng15 compability patch from gdal-1.8 to gdal-1.6 wrt #386009
 
 *gdal-1.8.1-r1 (26 Sep 2011)
 
